{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 71,
  "lineage": "d7616065-efa0-7f75-22ca-a8ee7b82f6b5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:security-group/sg-071c34f648751d0f6",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-071c34f648751d0f6",
            "ingress": [],
            "name": "TFEKSWorkshop-dev-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "897722665188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-dev-cluster-cluster-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-cluster-cluster-sg",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:security-group/sg-0c41f201c7fd3f0eb",
            "description": "Security group for EKS worker nodes",
            "egress": [],
            "id": "sg-0c41f201c7fd3f0eb",
            "ingress": [],
            "name": "TFEKSWorkshop-dev-cluster-node-sg",
            "name_prefix": "",
            "owner_id": "897722665188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-dev-cluster-node-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "owned"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-cluster-node-sg",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-1823042009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-071c34f648751d0f6",
            "security_group_rule_id": "sgr-04f9f785b90e13da2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS access to cluster API server",
            "from_port": 443,
            "id": "sgrule-1106295498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071c34f648751d0f6",
            "security_group_rule_id": "sgr-050e5351f7211f344",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster control plane to communicate with worker nodes",
            "from_port": 443,
            "id": "sgrule-504006035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071c34f648751d0f6",
            "security_group_rule_id": "sgr-09656eb2c55d97416",
            "self": false,
            "source_security_group_id": "sg-0c41f201c7fd3f0eb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.nodes",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to receive communication from cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1986877415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c41f201c7fd3f0eb",
            "security_group_rule_id": "sgr-0b9f94a4aa90769b7",
            "self": false,
            "source_security_group_id": "sg-071c34f648751d0f6",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.nodes",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1180139742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c41f201c7fd3f0eb",
            "security_group_rule_id": "sgr-01a71e1606b731f2c",
            "self": false,
            "source_security_group_id": "sg-0c41f201c7fd3f0eb",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.nodes",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-1676525660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c41f201c7fd3f0eb",
            "security_group_rule_id": "sgr-07db50537dd655963",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.nodes",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0664c774158bbd654",
            "association_id": "eipassoc-036a1a4d1ac8a91e0",
            "domain": "vpc",
            "id": "eipalloc-0664c774158bbd654",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ee974f66e2beabf4",
            "private_dns": "ip-10-0-0-13.ec2.internal",
            "private_ip": "10.0.0.13",
            "public_dns": "ec2-54-205-241-167.compute-1.amazonaws.com",
            "public_ip": "54.205.241.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TFEKSWorkshop-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-nat-eip",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:internet-gateway/igw-07dea2bce76ba846a",
            "id": "igw-07dea2bce76ba846a",
            "owner_id": "897722665188",
            "tags": {
              "Name": "TFEKSWorkshop-dev-igw"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-igw",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0664c774158bbd654",
            "association_id": "eipassoc-036a1a4d1ac8a91e0",
            "connectivity_type": "public",
            "id": "nat-0b7aa066157abb206",
            "network_interface_id": "eni-0ee974f66e2beabf4",
            "private_ip": "10.0.0.13",
            "public_ip": "54.205.241.167",
            "subnet_id": "subnet-0b3871b3c6a1cb0c3",
            "tags": {
              "Name": "TFEKSWorkshop-dev-nat"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-nat",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06fa3da53a36156631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7aa066157abb206",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fa3da53a3615663",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07dea2bce76ba846a",
            "id": "r-rtb-05435710ab4ac43ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05435710ab4ac43ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:route-table/rtb-06fa3da53a3615663",
            "id": "rtb-06fa3da53a3615663",
            "owner_id": "897722665188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7aa066157abb206",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TFEKSWorkshop-dev-private-rt"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-private-rt",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:route-table/rtb-05435710ab4ac43ba",
            "id": "rtb-05435710ab4ac43ba",
            "owner_id": "897722665188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dea2bce76ba846a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TFEKSWorkshop-dev-public-rt"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-public-rt",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b3b2e8324277508",
            "route_table_id": "rtb-06fa3da53a3615663",
            "subnet_id": "subnet-03f73587dcc1dc5a9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de68aadd293d20a4",
            "route_table_id": "rtb-06fa3da53a3615663",
            "subnet_id": "subnet-06699df43f0c1f01d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0172843d3e6b8b9c8",
            "route_table_id": "rtb-05435710ab4ac43ba",
            "subnet_id": "subnet-0b3871b3c6a1cb0c3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04934937e6a266e67",
            "route_table_id": "rtb-05435710ab4ac43ba",
            "subnet_id": "subnet-034ace4f4f6777f86"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:subnet/subnet-03f73587dcc1dc5a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f73587dcc1dc5a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722665188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-dev-private-us-east-1a",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared",
              "kubernetes.io/role/internal-alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-private-us-east-1a",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared",
              "kubernetes.io/role/internal-alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:subnet/subnet-06699df43f0c1f01d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06699df43f0c1f01d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722665188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-dev-private-us-east-1b",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared",
              "kubernetes.io/role/internal-alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-private-us-east-1b",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared",
              "kubernetes.io/role/internal-alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:subnet/subnet-0b3871b3c6a1cb0c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3871b3c6a1cb0c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722665188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-dev-public-us-east-1a",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-public-us-east-1a",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:subnet/subnet-034ace4f4f6777f86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034ace4f4f6777f86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722665188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-dev-public-us-east-1b",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-public-us-east-1b",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0112f92cd2506be42"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722665188:vpc/vpc-0112f92cd2506be42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089eae243d4d28e20",
            "default_route_table_id": "rtb-0ba90265ff670a8cc",
            "default_security_group_id": "sg-083e77770a1c3c000",
            "dhcp_options_id": "dopt-05f59c78afbfb3e02",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0112f92cd2506be42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba90265ff670a8cc",
            "owner_id": "897722665188",
            "tags": {
              "Name": "TFEKSWorkshop-dev-vpc",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "TFEKSWorkshop-dev-vpc",
              "Owner": "DevOps",
              "Project": "TFEKSWorkshop",
              "Terraform": "true",
              "kubernetes.io/cluster/TFEKSWorkshop-dev-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}